--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          sans-serif;">CALCULATER</h1></U></center>
     <div class="border">
         <form class="cal">
-            <input type="text"  placeholder="do your calulation here"name="display">
+            <input type="text"  placeholder="do your calculation here"name="display">
             <div><br><br>
                 <input type="button" value="7"class="button" >
                 <input type="button" value="8"   class="button">
